--- a/style.css
+++ b/style.css
@@ -62,3 +62,32 @@ button {
     background-color: #3882F6;
     color: white;
 }
+
+/* row2 */
+.row2 {
+    text-align: center;
+}
+
+h3 {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+
+.info-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px
+}
+.info {
+    max-width: 200px;
+    color: gray;
+}
+
+.image {
+    height: 200px;
+    width: 200px;
+    border: 5px solid #3882F6;
+    border-radius: 20px;
+}
