--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family:Arial, Helvetica, sans-serif;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -48,9 +52,10 @@ h1{
 
 .body {
     color: #E5E7EB;
+    max-width: 400px;
 }
 .placeholder {
-    background-color: grey;
+    background-color: darkgray;
     color: #E5E7EB;
     padding: 100px;
 }
@@ -81,13 +86,36 @@ h3 {
     gap: 50px
 }
 .info {
-    max-width: 200px;
+    max-width: 150px;
     color: gray;
 }
 
 .image {
-    height: 200px;
-    width: 200px;
+    height: 150px;
+    width: 150px;
     border: 5px solid #3882F6;
     border-radius: 20px;
+}
+
+/* row3 */
+
+.row3 {
+    background-color: #e5e7eb;
+    padding: 100px;
+    display: flex;
+    justify-content: center;
+}
+
+.quote-container{
+    max-width: 800px;
+}
+
+.quote {
+    color: #1F2937;
+    font-size: 36px;
+}
+
+.author {
+    color: #1F2937;
+    text-align: end;
 }
