Update index.html and style.css with row4 styling

--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ body {
 h4 {
     font-size: 24px;
     color: #F9FAF8;
+    padding: 0;
+    margin: 0;
 }
 
 .ul {
@@ -60,7 +62,7 @@ h1{
     padding: 100px;
 }
 
-button {
+.btn {
     padding: 5px 20px;
     border-radius: 6px;
     border-style: none;
@@ -119,3 +121,33 @@ h3 {
     color: #1F2937;
     text-align: end;
 }
+
+/* row4 */
+.row4 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 60px;
+}
+.shell {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 150px;
+    padding: 40px 100px 40px 100px;
+    background-color: #3882F6;
+    color: #E5E7EB;
+    max-width: 1000px;
+    border-radius: 20px;
+}
+
+.btn2 {
+        padding: 5px 20px;
+        border-radius: 6px;
+        border-color:#E5E7EB;
+        border-style: solid;
+        background-color: #3882F6;
+        color: white;
+}
+
+
